--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "2.0.0-beta.5",
   "author": "Tobias Koppers @sokra",
   "description": "Extract text from bundle into a file.",
+  "engines": { "node": ">=4.3.0 < 5.0.0 || >= 5.10" },
   "peerDependencies": {
-    "webpack": "^2.1.0-beta.19 || ^2.2.0-rc.0"
+    "webpack": "^2.2.0"
   },
   "dependencies": {
     "async": "^2.1.2",
@@ -14,15 +15,15 @@
   "devDependencies": {
     "codecov.io": "^0.1.2",
     "coveralls": "^2.11.2",
-    "css-loader": "^0.21.0",
-    "file-loader": "^0.8.4",
-    "istanbul": "^0.3.13",
-    "mocha": "^2.3.3",
-    "mocha-lcov-reporter": "0.0.2",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "1.2.0",
     "raw-loader": "^0.5.1",
-    "should": "^7.1.1",
+    "should": "^11.1.2",
     "style-loader": "^0.13.0",
-    "webpack": "^2.1.0-beta"
+    "webpack": "^2.2.0"
   },
   "homepage": "http://github.com/webpack/extract-text-webpack-plugin",
   "repository": {
