--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "engines": {
     "node": ">=4.3.0 < 5.0.0 || >= 5.10"
   },
+  "main": "index.js",
+  "files": [
+    "schema",
+    "ExtractedModule.js",
+    "index.js",
+    "loader.js",
+    "OrderUndefinedError.js"
+  ],
   "peerDependencies": {
     "webpack": "^2.2.0"
   },
