--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "webpack": "^2.2.0"
   },
   "dependencies": {
-    "ajv": "^4.11.2",
+    "schema-utils": "^0.3.0",
     "async": "^2.1.2",
     "loader-utils": "^1.0.2",
     "webpack-sources": "^0.1.0"
