--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,3 @@
 {
-	"env": {
-		"node": true
-	},
-	"rules": {
-		"strict": 0,
-		"curly": 0,
-		"quotes": 0,
-		"no-shadow": 0,
-		"no-underscore-dangle": 0
-	}
+  "extends": "webpack"
 }
