--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Tobias Koppers @sokra",
   "description": "Extract text from bundle into a file.",
   "engines": {
-    "node": ">=4.3.0 < 5.0.0 || >= 5.10"
+    "node": ">= 4.3 < 5.0.0 || >= 5.10"
   },
   "main": "index.js",
   "files": [
@@ -12,30 +12,46 @@
     "ExtractedModule.js",
     "index.js",
     "loader.js",
-    "OrderUndefinedError.js"
+    "OrderUndefinedError.js",
+    "dist"
   ],
   "peerDependencies": {
-    "webpack": ">= 3.0.0-rc.0 || ^3.0.0"
+    "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
   },
   "dependencies": {
-    "schema-utils": "^0.3.0",
     "async": "^2.1.2",
     "loader-utils": "^1.0.2",
+    "schema-utils": "^0.3.0",
     "webpack-sources": "^1.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-jest": "^20.0.3",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "codecov.io": "^0.1.6",
     "coveralls": "^2.11.2",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "del-cli": "^1.0.0",
+    "eslint": "^4.0.0",
+    "eslint-config-webpack": "^1.2.3",
+    "eslint-plugin-import": "^2.3.0",
     "file-loader": "^0.11.2",
     "istanbul": "^0.4.5",
+    "jest": "^20.0.4",
+    "lint-staged": "^3.6.1",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "1.3.0",
+    "nsp": "^2.6.3",
+    "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
     "should": "^11.1.2",
     "standard-version": "^4.1.0",
     "style-loader": "^0.18.2",
-    "webpack": "^3.0.0-rc.0"
+    "webpack": "^3.0.0-rc.1",
+    "webpack-defaults": "^1.4.0"
   },
   "homepage": "http://github.com/webpack-contrib/extract-text-webpack-plugin",
   "repository": {
@@ -44,10 +60,33 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "mocha",
+    "test": "jest",
+    "test:mocha": "mocha",
     "travis": "npm run cover -- --report lcovonly",
     "cover": "istanbul cover _mocha",
     "release": "standard-version",
-    "build:example": "(cd example && webpack)"
+    "build:example": "(cd example && webpack)",
+    "webpack-defaults": "webpack-defaults",
+    "start": "npm run build -- -w",
+    "appveyor:test": "npm run test",
+    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
+    "clean": "del-cli dist",
+    "lint": "eslint --cache src test",
+    "lint-staged": "lint-staged",
+    "prebuild": "npm run clean",
+    "prepublish": "npm run build",
+    "security": "nsp check",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "travis:lint": "npm run lint && npm run security",
+    "travis:test": "npm run test -- --runInBand",
+    "travis:coverage": "npm run test:coverage -- --runInBand"
+  },
+  "pre-commit": "lint-staged",
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
