refactor: Modernize plugin syntax
 - Convert to ES6+ Class
 - Convert to ES6+ default export
 - Convert to const / let
 - Uses import syntax
 - Convert errors to templates

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "rules": {
     "prefer-destructuring": 1,
     "prefer-rest-params": 1,
+    "class-methods-use-this": 1,
     "no-plusplus": 1,
     "consistent-return": 1,
     "no-param-reassign": 1
