--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "1.3.0",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.1",
     "should": "^11.1.2",
     "standard-version": "^4.1.0",
     "style-loader": "^0.18.2",
