--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "should": "^11.1.2",
     "standard-version": "^4.1.0",
     "style-loader": "^0.18.2",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1 || ^3.0.0"
   },
   "homepage": "http://github.com/webpack-contrib/extract-text-webpack-plugin",
   "repository": {
