chore: Set peerDeps to 4.x & drop Node 4

--- a/package.json
+++ b/package.json
@@ -6,68 +6,81 @@
   "license": "MIT",
   "main": "dist/cjs.js",
   "files": [
-    "dist",
-    "schema"
+    "dist"
   ],
   "scripts": {
     "start": "npm run build -- -w",
-    "appveyor:test": "npm run test",
-    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
-    "build:example": "(cd example && webpack)",
+    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
     "clean": "del-cli dist",
+    "commitlint": "commitlint",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint --cache src test",
+    "ci:lint:commits": "commitlint --from=${CIRCLE_BRANCH} --to=${CIRCLE_SHA1}",
     "lint-staged": "lint-staged",
     "prebuild": "npm run clean",
     "prepublish": "npm run build",
     "release": "standard-version",
+    "release:ci": "conventional-github-releaser -p angular",
+    "release:validate": "commitlint --from=$(git describe --tags --abbrev=0) --to=$(git rev-parse HEAD)",
     "security": "nsp check",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "travis:lint": "npm run lint && npm run security",
-    "travis:test": "npm run test -- --runInBand",
-    "travis:coverage": "npm run test:coverage -- --runInBand",
+    "ci:lint": "npm run lint && npm run security",
+    "ci:test": "npm run test -- --runInBand",
+    "ci:coverage": "npm run test:coverage -- --runInBand",
     "webpack-defaults": "webpack-defaults"
   },
   "dependencies": {
     "async": "^2.4.1",
     "loader-utils": "^1.1.0",
-    "schema-utils": "^0.3.0",
-    "webpack-sources": "^1.0.1"
+    "schema-utils": "^0.4.3",
+    "webpack-sources": "^1.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^5.2.5",
+    "@commitlint/config-angular": "^5.1.1",
+    "@webpack-contrib/eslint-config-webpack": "^2.0.2",
     "babel-cli": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.0",
+    "conventional-github-releaser": "^2.0.0",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
+    "del": "^3.0.0",
     "del-cli": "^1.1.0",
-    "eslint": "^4.9.0",
-    "eslint-config-webpack": "^1.2.5",
+    "eslint": "^4.13.1",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.3.1",
     "file-loader": "^1.1.5",
+    "husky": "^0.14.3",
     "jest": "^21.2.1",
-    "lint-staged": "^4.3.0",
-    "nsp": "^2.8.1",
+    "lint-staged": "^6.0.0",
+    "memory-fs": "^0.4.1",
+    "nsp": "^3.1.0",
     "pre-commit": "^1.2.2",
+    "prettier": "^1.9.2",
     "raw-loader": "^0.5.1",
     "standard-version": "^4.2.0",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-defaults": "^1.6.0"
+    "webpack": "^3.10.0",
+    "webpack-defaults": "^2.0.0-beta.1"
   },
   "engines": {
-    "node": ">= 4.8 < 5.0.0 || >= 5.10"
+    "node": ">= 6.9.0 || >= 8.9.0"
   },
   "peerDependencies": {
-    "webpack": "^3.1.0"
+    "webpack": "^3.1.0 || ^4.0.0"
   },
-  "homepage": "http://github.com/webpack-contrib/extract-text-webpack-plugin",
+  "homepage": "https://github.com/webpack-contrib/extract-text-webpack-plugin",
   "repository": {
     "type": "git",
-    "url": "http://github.com/webpack-contrib/extract-text-webpack-plugin.git"
+    "url": "https://github.com/webpack-contrib/extract-text-webpack-plugin"
+  },
+  "bugs": {
+    "url": "https://github.com/webpack-contrib/extract-text-webpack-plugin"
   },
   "pre-commit": "lint-staged",
   "lint-staged": {
