--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,10 @@ unit_tests: &unit_tests
     - checkout
     - setup_remote_docker
     - restore_cache:
-        key: dependency-cache-{{ checksum "package.json" }}
+        key: dependency-cache-{{ checksum "package-lock.json" }}
     - run:
         name: NPM Rebuild
-        command: npm rebuild
+        command: npm install
     - run:
         name: Run unit tests.
         command: npm run ci:test
@@ -15,10 +15,10 @@ canary_tests: &canary_tests
     - checkout
     - setup_remote_docker
     - restore_cache:
-        key: dependency-cache-{{ checksum "package.json" }}
+        key: dependency-cache-{{ checksum "package-lock.json" }}
     - run:
         name: NPM Rebuild
-        command: npm rebuild
+        command: npm install
     - run:
         name: Install Webpack Canary
         command: npm i --no-save webpack@next
@@ -35,26 +35,26 @@ jobs:
       - checkout
       - setup_remote_docker
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
           command: npm install
       - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
 
-  node8_webpack_latest:
+  node8-latest:
     docker:
       - image: webpackcontrib/circleci-node8:latest
     steps:
       - checkout
       - setup_remote_docker
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: NPM Rebuild
-          command: npm rebuild
+          command: npm install
       - run:
           name: Run unit tests.
           command: npm run ci:coverage
@@ -62,15 +62,15 @@ jobs:
           name: Submit coverage data to codecov.
           command: bash <(curl -s https://codecov.io/bash)
           when: on_success
-  node6_webpack_latest:
+  node6-latest:
     docker:
       - image: webpackcontrib/circleci-node6:latest
     <<: *unit_tests
-  node9_webpack_latest:
+  node9-latest:
     docker:
       - image: webpackcontrib/circleci-node9:latest
     <<: *unit_tests
-  node8_webpack_canary:
+  node8-canary:
     docker:
       - image: webpackcontrib/circleci-node8:latest
     <<: *canary_tests
@@ -81,10 +81,10 @@ jobs:
       - checkout
       - setup_remote_docker
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: NPM Rebuild
-          command: npm rebuild
+          command: npm install
       - run:
           name: Run linting.
           command: npm run lint
@@ -101,10 +101,10 @@ jobs:
       - checkout
       - setup_remote_docker
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: NPM Rebuild
-          command: npm rebuild
+          command: npm install
       - run:
           name: Validate Commit Messages
           command: npm run release:validate
@@ -118,25 +118,7 @@ workflows:
   validate-publish:
     jobs:
       - dependency_cache
-      - node6_webpack_latest:
-          requires:
-            - dependency_cache
-          filters:
-            tags:
-              only: /.*/
-      - node8_webpack_latest:
-          requires:
-            - dependency_cache
-          filters:
-            tags:
-              only: /.*/
-      - node9_webpack_latest:
-          requires:
-            - dependency_cache
-          filters:
-            tags:
-              only: /.*/
-      - node8_webpack_canary:
+      - node6-latest:
           requires:
             - dependency_cache
           filters:
@@ -144,18 +126,35 @@ workflows:
               only: /.*/
       - analysis:
           requires:
-            - node6_webpack_latest
-            - node8_webpack_latest
-            - node9_webpack_latest
+            - dependency_cache
+          filters:
+            tags:
+              only: /.*/
+      - node8-latest:
+          requires:
+            - analysis
+            - node6-latest
+          filters:
+            tags:
+              only: /.*/
+      - node9-latest:
+          requires:
+            - analysis
+            - node6-latest
+          filters:
+            tags:
+              only: /.*/
+      - node8-canary:
+          requires:
+            - analysis
+            - node6-latest
           filters:
             tags:
               only: /.*/
       - publish:
           requires:
-            - node6_webpack_latest
-            - node8_webpack_latest
-            - node9_webpack_latest
-            - analysis
+            - node8-latest
+            - node9-latest
           filters:
             branches:
               only:
