--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint --cache src test",
     "ci:lint:commits": "commitlint --from=${CIRCLE_BRANCH} --to=${CIRCLE_SHA1}",
     "lint-staged": "lint-staged",
+    "prepare": "npm run build",
     "prebuild": "npm run clean",
     "prepublish": "npm run build",
     "release": "standard-version",
