--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,13 +7,13 @@ init:
 environment:
   matrix:
     - nodejs_version: '8'
-      webpack_version: latest
+      webpack_version: '4.0.0-beta.0'
       job_part: test
     - nodejs_version: '6'
-      webpack_version: latest
+      webpack_version: '4.0.0-beta.0'
       job_part: test
     - nodejs_version: '8'
-      webpack_version: next
+      webpack_version: '4.0.0-beta.0'
       job_part: test
 build: 'off'
 matrix:
