--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extract-text-webpack-plugin",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "author": "Tobias Koppers @sokra",
   "description": "Extract text from bundle into a file.",
   "license": "MIT",
@@ -48,6 +48,7 @@
     "eslint-config-webpack": "^1.2.5",
     "eslint-plugin-import": "^2.8.0",
     "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^3.0.6",
     "jest": "^21.2.1",
     "lint-staged": "^4.3.0",
     "nsp": "^2.8.1",
@@ -55,7 +56,7 @@
     "raw-loader": "^0.5.1",
     "standard-version": "^4.2.0",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
+    "webpack": "^4.0.1",
     "webpack-defaults": "^1.6.0"
   },
   "engines": {
