--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "async": "^2.4.1",
+    "glob": "^7.1.2",
     "loader-utils": "^1.1.0",
     "schema-utils": "^0.4.5",
     "webpack-sources": "^1.1.0"
@@ -65,7 +66,7 @@
     "raw-loader": "^0.5.1",
     "standard-version": "^4.3.0",
     "style-loader": "^0.19.1",
-    "webpack": "^4.0.0",
+    "webpack": "^4.1.1",
     "webpack-defaults": "^2.0.0-rc.4"
   },
   "engines": {
